platform/networking/envoy-gateway/overlays/prod/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: admancorp-envoy
  namespace: networking
spec:
  gatewayClassName: admancorp-envoy
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: admancorp-envoy-proxy
  listeners:
    - name: http-root
      protocol: HTTP
      port: 80
      hostname: admancorp.com
      allowedRoutes:
        namespaces:
          from: All
    - name: http-apps
      protocol: HTTP
      port: 80
      hostname: '*.admancorp.com'
      allowedRoutes:
        namespaces:
          from: All
    - name: https-root
      protocol: HTTPS
      port: 443
      hostname: admancorp.com
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: admancorp-envoy-apps-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-apps
      protocol: HTTPS
      port: 443
      hostname: '*.admancorp.com'
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: admancorp-envoy-apps-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
